MINOR: replace Collections.singleton() with Set.of() (#23320)
verified with `./gradlew :streams:test --tests
"org.apache.kafka.streams.processor.internals.StoreChangelogReaderTest"`

Reviewers: Chia-Ping Tsai <chia7712@gmail.com>, Ken Huang
<s7133700@gmail.com>